cleaning up files

--- a/contrib/camriddell/jupyterbook-demo/test.ipynb
+++ b/contrib/camriddell/jupyterbook-demo/test.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "id": "7a8fe625-992a-44ff-aee1-c37c5472a2c6",
    "metadata": {},
    "outputs": [],
@@ -30,21 +30,8 @@
   },
   {
    "cell_type": "markdown",
-   "id": "df64eef7-ba5a-4ea7-bf75-fa7b3c7d6c88",
-   "metadata": {
-    "user_expressions": [
-     {
-      "expression": "z",
-      "result": {
-       "data": {
-        "text/plain": "3"
-       },
-       "metadata": {},
-       "status": "ok"
-      }
-     }
-    ]
-   },
+   "id": "1b21e319-8315-46bd-8a54-2cc795378ea9",
+   "metadata": {},
    "source": [
     "test eval below:\n",
     "\n",
@@ -55,6 +42,38 @@
     "x + y → {eval}`z`\n",
     "\n",
     "end eval test. If no output above, test failed"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "8e42471f-5929-4e2f-b3ad-0c0481b62742",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "some_statistical_test = ...\n",
+    "pvalue = 0.05"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "975f4da1-1d68-4556-8dcb-5f3101e1b5e5",
+   "metadata": {
+    "user_expressions": [
+     {
+      "expression": "pvalue",
+      "result": {
+       "data": {
+        "text/plain": "0.05"
+       },
+       "metadata": {},
+       "status": "ok"
+      }
+     }
+    ]
+   },
+   "source": [
+    "The test resulted in pvalue of {eval}`pvalue`. This means that the test was...\n"
    ]
   },
   {
@@ -77,11 +96,14 @@
     "- {cite:t}`perez2011python`\n",
     "- {cite:t}`caporaso2010qiime`\n",
     "\n",
+    "Based on my research of (cite) `perez2011python` , I concluded that...\n",
+    "\n",
     "Parenthetical Citation:\n",
     " \n",
     "```\n",
     "{cite:p}`perez2011python`\n",
     "```\n",
+    "\n",
     "\n",
     "- {cite:p}`perez2011python`\n",
     "- {cite:p}`caporaso2010qiime`\n",
