removed quotes from title and replaced with :

--- a/contrib/MiaVenezia/jupyterbook-demo-MiaVenezia/MiaVenezia-paper.ipynb
+++ b/contrib/MiaVenezia/jupyterbook-demo-MiaVenezia/MiaVenezia-paper.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "<center>\n",
     "\n",
-    "# \"We're Not Getting Our Money's Worth\"\n",
+    "# We're Not Getting Our Money's Worth:\n",
     "\n",
     "## An Analysis of Health Outcomes in Universal, Blended, and Private Health Systems\n",
     "\n",
