Chat Gpt Prompt: Please identify any typos in the text of this paper. Thanks! - Typos corrected in Literature Review and Discussion sections.

--- a/contrib/MiaVenezia/jupyterbook-demo-MiaVenezia/MiaVenezia-paper.ipynb
+++ b/contrib/MiaVenezia/jupyterbook-demo-MiaVenezia/MiaVenezia-paper.ipynb
@@ -483,7 +483,7 @@
    "source": [
     "# Discussion \n",
     "\n",
-    "The goal of this paper was to assess access to healthcare in countries with national or universal healthcare coverage, those with blended private pay and governmentally supported healthcare, and the United Dtates, which is the only developed nation where the cost of healthcare falls almost entirely on the individual. We found that despite national health expenditures being almost twice as much as universal and blended systems, health outcomes in the US are worse than the other systems.  "
+    "The goal of this paper was to assess access to healthcare in countries with national or universal healthcare coverage, those with blended private pay and governmentally supported healthcare, and the United States, which is the only developed nation where the cost of healthcare falls almost entirely on the individual. We found that despite national health expenditures being almost twice as much as universal and blended systems, health outcomes in the US are worse than the other systems.  "
    ]
   },
   {
