Added 5 new sources to be cited in the Introduction section of the paper

--- a/contrib/MiaVenezia/jupyterbook-demo-MiaVenezia/paperpile_references.bib
+++ b/contrib/MiaVenezia/jupyterbook-demo-MiaVenezia/paperpile_references.bib
@@ -540,3 +540,146 @@
   year     =  2021,
   language = "en"
 }
+
+
+@ARTICLE{Gunja2023-li,
+  title   = "{US} health care from a global perspective, 2022: accelerating
+             spending, worsening outcomes",
+  author  = "Gunja, M Z and Gumas, E D and Williams, R D",
+  journal = "The Commonwealth Fund. Published January",
+  year    =  2023
+}
+
+@UNPUBLISHED{Singer2022-oc,
+  title    = "Understanding Required Financial Assistance in Medical Care",
+  author   = "Singer, Susan and Wilson, Eric and Carare, Octavian",
+  abstract = "Many consumers struggle to afford the costs of essential medical
+              services. To bring more focus to the impact of medical bills and
+              collections on consumers, the Consumer Financial Protection
+              Bureau (CFPB) is releasing reports and blogs over the next
+              several months discussing the key financial hurdles the health
+              care system presents to patients and their families. In this
+              research brief, we discuss required financial assistance (also
+              known as charity care), one of the main forms of assistance
+              hospitals offer to low-income consumers to help cover the cost of
+              medical treatment.1 In the following, we define required
+              financial assistance, explain its sources of funding, who is
+              eligible, and who its likely beneficiaries are. In forthcoming
+              briefs, we intend to discuss the pitfalls of medical credit cards
+              and installment payments in the medical payment space.",
+  month    =  jul,
+  year     =  2022
+}
+
+@ARTICLE{Pratiwi2021-uq,
+  title     = "Is Indonesia achieving universal health coverage? Secondary
+               analysis of national data on insurance coverage, health spending
+               and service availability",
+  author    = "Pratiwi, Agnes Bhakti and Setiyaningsih, Hermawati and Kok,
+               Maarten Olivier and Hoekstra, Trynke and Mukti, Ali Ghufron and
+               Pisani, Elizabeth",
+  abstract  = "OBJECTIVES: To analyse the relationship between health need,
+               insurance coverage, health service availability, service use,
+               insurance claims and out-of-pocket spending on health across
+               Indonesia. DESIGN: Secondary analysis of nationally
+               representative quantitative data. We merged four national data
+               sets: the National Socioeconomic Survey 2018, National Census of
+               Villages 2018, Population Health Development Index 2018 and
+               National Insurance Records to end 2017. Descriptive analysis and
+               linear regression were performed. SETTING: Indonesia has one of
+               the world's largest single-payer national health insurance
+               schemes. Data are individual and district level; all are
+               representative for each of the country's 514 districts.
+               PARTICIPANTS: Anonymised secondary data from 1 131 825
+               individual records in the National Socioeconomic Survey and 83
+               931 village records in the village census. Aggregate data for
+               220 million insured citizens. PRIMARY OUTCOME MEASURES: Health
+               service use and out-of-pocket payments, by health need,
+               insurance status and service availability. Secondary outcome:
+               insurance claims. RESULTS: Self-reported national health
+               insurance registration (60.6\%) is about 10\% lower compared
+               with the insurer's report (71.1\%). Insurance coverage is
+               highest in poorer areas, where service provision, and thus
+               service use and health spending, are lowest. Inpatient use is
+               higher among the insured than the uninsured (OR 2.35, 95\% CI
+               2.27 to 2.42), controlling for health need and access), and
+               poorer patients are most likely to report free inpatient care
+               (53\% in wealth quintile 1 vs 41\% in Q5). Insured patients
+               spend US\$ 3.14 more on hospitalisation than the uninsured (95\%
+               CI 1.98 to 4.31), but the difference disappears when controlled
+               for wealth. Lack of services is a major constraint on service
+               use, insurance claims and out-of-pocket spending. CONCLUSIONS:
+               The Indonesian public insurance system protects many inpatients,
+               especially the poorest, from excessive spending. However,
+               others, especially in Eastern Indonesia cannot benefit because
+               few services are available. To achieve health equity, the
+               Indonesian government needs to address supply side constraints
+               and reduce structural underfunding.",
+  journal   = "BMJ Open",
+  publisher = "bmjopen.bmj.com",
+  volume    =  11,
+  number    =  10,
+  pages     = "e050565",
+  month     =  oct,
+  year      =  2021,
+  keywords  = "health economics; health policy; health services administration
+               \& management",
+  language  = "en"
+}
+
+@ARTICLE{Zieff2020-kg,
+  title    = "Universal Healthcare in the United States of America: A Healthy
+              Debate",
+  author   = "Zieff, Gabriel and Kerr, Zachary Y and Moore, Justin B and
+              Stoner, Lee",
+  abstract = "This commentary offers discussion on the pros and cons of
+              universal healthcare in the United States. Disadvantages of
+              universal healthcare include significant upfront costs and
+              logistical challenges. On the other hand, universal healthcare
+              may lead to a healthier populace, and thus, in the long-term,
+              help to mitigate the economic costs of an unhealthy nation. In
+              particular, substantial health disparities exist in the United
+              States, with low socio-economic status segments of the population
+              subject to decreased access to quality healthcare and increased
+              risk of non-communicable chronic conditions such as obesity and
+              type II diabetes, among other determinants of poor health. While
+              the implementation of universal healthcare would be complicated
+              and challenging, we argue that shifting from a market-based
+              system to a universal healthcare system is necessary. Universal
+              healthcare will better facilitate and encourage sustainable,
+              preventive health practices and be more advantageous for the
+              long-term public health and economy of the United States.",
+  journal  = "Medicina",
+  volume   =  56,
+  number   =  11,
+  month    =  oct,
+  year     =  2020,
+  keywords = "chronic disease; diabetes; health insurance; health promotion;
+              hypertension; obesity; socio--economic status; universal
+              healthcare",
+  language = "en"
+}
+
+@ARTICLE{Blendon2006-iy,
+  title    = "Americans' views of health care costs, access, and quality",
+  author   = "Blendon, Robert J and Brodie, Mollyann and Benson, John M and
+              Altman, Drew E and Buhr, Tami",
+  abstract = "For more than two decades, polls have shown that Americans are
+              dissatisfied with their current health care system. However, the
+              public's views on how to change the current system are more
+              conflicted than often suggested by individual poll results. At
+              the same time, Americans are both dissatisfied with the current
+              health care system and relatively satisfied with their own health
+              care arrangements. As a result of the conflict between these
+              views and the public's distrust of government, there often is a
+              wide gap between the public's support for a set of principles
+              concerning what needs to be done about the overall problems
+              facing the nation's health care system and their support for
+              specific policies designed to achieve those goals.",
+  journal  = "Milbank Q.",
+  volume   =  84,
+  number   =  4,
+  pages    = "623--657",
+  year     =  2006,
+  language = "en"
+}
