Removed redundant explanation of data sources at the beginning of the Results section.

--- a/contrib/MiaVenezia/jupyterbook-demo-MiaVenezia/MiaVenezia-paper.ipynb
+++ b/contrib/MiaVenezia/jupyterbook-demo-MiaVenezia/MiaVenezia-paper.ipynb
@@ -96,9 +96,7 @@
    "id": "11c51660-bebf-4886-8b53-b83d717c1150",
    "metadata": {},
    "source": [
-    "# Results\n",
-    "\n",
-    "Data were gathered for developed nations having either universal/national healthcare or a blended system of national and private care resulting in broad coverage, Of the countries studied, Canada, France, the United Kingdom, Australia and Taiwan have universal healthcare systems, and Germany, Italy, Japan, Sweden and China have blended systems. The US, as the only developed nation with a private healthcare system (with governmental support limited to the elderly and disabled) was also included. For each country, data related to healthcare expenditures per GDP, infant mortality, life expectancy, diagnosed type 2 diabetes, and cardiovascular deaths were collected. "
+    "# Results"
    ]
   },
   {
