Added details to the Methodology section to specify exactly how the data was examined, manipulated, and analyzed.

--- a/contrib/MiaVenezia/jupyterbook-demo-MiaVenezia/MiaVenezia-paper.ipynb
+++ b/contrib/MiaVenezia/jupyterbook-demo-MiaVenezia/MiaVenezia-paper.ipynb
@@ -88,7 +88,12 @@
     "\n",
     "Cardiovascular deaths:\n",
     "www.statista.com\n",
-    " "
+    "\n",
+    "Means for all variables for the NHC group were calculated.\n",
+    "Means for all variables for the blended group were calculated.\n",
+    "For comparisons of the 2 group means for each variable, a standard t-test was performed to determine statistical significance.\n",
+    "Scatter plot graphs were developed for each variable with groups and the US identified by color.\n",
+    "A separate analysis of data from Taiwan was performed using a standard t-test to determine if longevity differences before and after national health care were significant."
    ]
   },
   {
