Refined Discussion section for conciseness with similar Chat Gpt prompts to those used for the Introduction and Literature Review. Also inserted code cell spaces for Taiwan t-tests.

--- a/contrib/MiaVenezia/jupyterbook-demo-MiaVenezia/MiaVenezia-paper.ipynb
+++ b/contrib/MiaVenezia/jupyterbook-demo-MiaVenezia/MiaVenezia-paper.ipynb
@@ -482,40 +482,38 @@
    "source": [
     "# Discussion \n",
     "\n",
-    "The goal of this paper was to assess access to healthcare in countries with national or universal healthcare coverage, those with blended private pay and governmentally supported healthcare, and the United States, which is the only developed nation where the cost of healthcare falls almost entirely on the individual. We found that despite national health expenditures being almost twice as much as universal and blended systems, health outcomes in the US are worse than the other systems.  "
+    "The goal of this paper was to assess access to healthcare in countries with national or blended systems and the United States by comparing several health outcomes. We found that despite US health expenditures being almost twice as much as national and blended systems, health outcomes in the US are worse than the other systems. \n",
+    "Health statistics at the beginning and the end of life form the framework for this study. Infant mortality and longevity are measurable outcomes often used to reflect the public's health.\n",
+    "In general, higher national expenditures on healthcare correlates with lower infant mortality rates {cite:p}`Owusu2021-oo`. Our study revealed an exception to that correlation. The US fares significantly worse than both NHC and blended systems. With regard to longevity, the nationalized US Medicare system does not seem to benefit senior citizens, likely because access to healthcare later in life does not ameliorate a prior lifetime of inconsistent healthcare access. At 76 years, US longevity is significantly shorter than both NHC and blended systems. \n",
+    "In addition to birth and death markers, health statistics regarding the quality of a life lived are also outcomes that can be used to assess public health. Diabetes Mellitus Type 2 is a common chronic illness which can be managed (even prevented) with proper access to healthcare. Diagnosed diabetes in the US is significantly higher than in UHC or blended systems. Higher rates of diagnosed diabetes in the US seems like a good result for US healthcare because these patients met with a healthcare professional at least once, but the International Diabetes Federation estimates that the rate of *undiagnosed* diabetes in the US is more than four times that of UHC and blended systems. This underscores the failure of expensive US healthcare to address prevention and management, both of which are functions of access. Like diabetes, the rate of cardiovascular-related death is an indirect measure of lifetime illness which can in turn provide information regarding health expectancy and healthcare access. The US rate of deaths from cardiovascular disease is higher than both UHC and blended systems, but not significantly so.   "
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "67401c89-423b-4d5f-858a-4000c736b8e6",
+   "id": "7254c511-b38b-48cc-91e9-74d660a60490",
    "metadata": {},
    "source": [
-    "Health statistics and the beginning and the end of life form the framework for this study. Infant mortality and longevity are measurable outcomes often used to reflect the public's health. In general, research indicates that higher national expenditures on healthcare correlated with lower infant mortality rates. {cite:p}`Owusu2021-oo` Our study revealed an exception to that correlation. The US fares significantly worse tgan both UHC and blended systems. Medicaid expansion under the ACA supports the research trend, however. Infant mortality in states which accepted additional Medicaid funds did decrease, but the 19 states which did not accept additional Medicaid funds (most of which were in the already socioeconomically challenged south) saw an increase in infant mortality. {cite:p}`Bhatt2018-kp` With regard to longevity, the nationalized US Medicare system does not seem to benefit senior citizens, likely because access to healthcare later in life does not ameliorate a prior lifetime of inconsistent healthcare access. At 76 years, US longevity is significantly shorter than both UHC and blended systems. "
+    "**Before and After: A Case Study**\n",
+    "\n",
+    "Note that Taiwan was included in the country comparison as an example of a national healthcare system. Taiwan introduced national health insurance in 1995. This relatively recent turning point in Taiwan’s healthcare history provides additional intra-country comparative information regarding healthcare access and longevity specifically, as data exists for this metric for the decade before and after national coverage began.\n",
+    "Between 1982 and 1992 (pre-NHC), the average longevity for men in Taiwan increased from 69.56 years to 71.83 years (2.27 years). From 1992 to 2002 (post-NHC), men's longevity increased to 74.22 (2.39 years). Similarly for women, longevity increased from 74.58 to 77.30 (2.73), and then to 80.9 (2.78). These changes were determined not to be significant using a standard t-test. "
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "351792ef-759d-4517-b30d-f88a3ae2eb67",
+   "id": "d0784241-72e4-40c2-a1ea-f751723a1d68",
    "metadata": {},
    "source": [
-    "In addition to birth and death markers, health expectancy statistics regarding the quality of a life lived are also outcomes that can be used to assess public health. Diabetes Mellitus Type 2 is a common chronic illness which can be managed (even prevented) with proper access to healthcare. Diagnosed diabetes in the US is significantly higher than in UHC or blended systems. Higher rates of diagnosed diabetes in the US seems like a good result for US healthcare because these patients met with a healthcare professional at least once, but the International Diabetes Federation estimates that the rate of undiagnosed diabetes in the US is more than four times that of UHC and blended systems. This underscores the failure of expensive US healthcare to address prevention and management, both of which are functions of access. Like diabetes, the rate of cardiovascular-related deaths is an indirect measure of lifetime illness which can in turn provide information regarding health expectancy and healthcare access. The US rate of deaths from cardiovascular disease is higher than both UHC and blended systems, but not significantly so. Again, US health expenditures--even governmental support for seniors--do not seem to pay off. "
+    "T TEST 1"
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "52574cf4-da2a-4b3f-b6b2-1cba94c2d910",
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e767e65e-5ab3-4540-8ac9-d593d66cba0b",
    "metadata": {},
-   "source": [
-    "Note that Taiwan was included in the country comparison as an example of a universal health care system. Taiwan introduced national health insurance in 1995. This relatively recent turning point in Taiwan’s healthcare history provides additional intra-country comparative information regarding healthcare access and life expectancy specifically, as data exists for this metric for the decade before and after universal coverage began."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "4d70c17b-b55e-434a-8cc5-2a3c6eccdd31",
-   "metadata": {},
-   "source": [
-    "Between 1982 and 1992 (pre-UHC), the average life expectancy for men in Taiwan increased from 69.56 years to 71.83 years (2.27 years). From 1992 to 2002 (post-UHC), men's life expectancy increased to 74.22 (2.39 years). Similarly for women, life expectancy increased from 74.58 to 77.30, and then to 80.9 (2.78). These changes were determined not to be statistically significant. However, when access to care before and after universal coverage was considered as a function of income decile, increases for those in the lower income deciles accounted for the majority of the overall increase. For men who had high incomes and healthcare coverage before universal coverage, life expectancy increased 3.50 years before coverage and 1.99 years after, but for those who had the lowest incomes and little or no access to health care, the increases 1.22 and 2.61 years, respectively. The rate of increase *slowed* for tge upper decile (-1.51%) but *accelerated* for the lowest decile (+1.39%). Results were again similar for women. {cite:p}`Wen2008-vr`"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "attachments": {},
