Something in the last push did not actually push to Github. Looks like it was the space for the second and third t-tests.

--- a/contrib/MiaVenezia/jupyterbook-demo-MiaVenezia/MiaVenezia-paper.ipynb
+++ b/contrib/MiaVenezia/jupyterbook-demo-MiaVenezia/MiaVenezia-paper.ipynb
@@ -508,12 +508,28 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e767e65e-5ab3-4540-8ac9-d593d66cba0b",
+   "cell_type": "markdown",
+   "id": "2b2acbd8-4119-4ea8-8e61-71f2fd04fc24",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "However, when longevity as a marker for access to care before and after national coverage was considered as a function of income decile, increases for those in the lower income deciles accounted for the majority of the overall increase. Longevity increased more for lower decile women than upper decile women after NHC than before NHC, but the difference was not quite statistically significant. Lower decile men made significantly better gains in longevity compared to their more affluent counterparts. For men in the three highest income deciles with more access to healthcare prior to NHC, longevity increased less (1.51%, 0.84% and 0.17% respectively) after than before national healthcare coverage. For men in the lowest three deciles little to no access to healthcare prior to NHC, longevity increased more (1.39%, 0.47% and 0.74% respectively) before and after national healthcare coverage. The rate of increase in longevity *slowed* slightly for the upper deciles but *accelerated* for the lowest deciles {cite:p}`Wen2008-vr`. This difference was found to be statistically significant. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "03fd6d3d-d7fc-4e9b-b843-4adc84b2c477",
+   "metadata": {},
+   "source": [
+    "T TEST 2 "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9a887baa-7919-40c0-a4e5-3e644b03b59d",
+   "metadata": {},
+   "source": [
+    "T TEST 3 "
+   ]
   },
   {
    "attachments": {},
