Ran one t-test and decided not to include the other two for redundancy concerns.

--- a/contrib/MiaVenezia/jupyterbook-demo-MiaVenezia/MiaVenezia-paper.ipynb
+++ b/contrib/MiaVenezia/jupyterbook-demo-MiaVenezia/MiaVenezia-paper.ipynb
@@ -504,7 +504,49 @@
    "id": "d0784241-72e4-40c2-a1ea-f751723a1d68",
    "metadata": {},
    "source": [
-    "T TEST 1"
+    "*Comparing the 10-year Change in Longevity Before and After NHC (I.e., The Increase Between 1984 and 1994 (Before) and 1994 and 2004 (After))*"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "ca8857c6-9dfa-4ebd-a8fa-2eb2e0c129ca",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "T-statistic: 0.2124713121811935\n",
+      "P-value: 0.8514275285966173\n",
+      "There is no significant difference in means.\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "from scipy import stats\n",
+    "\n",
+    "# Set seed for reproducibility (can be any integer)\n",
+    "np.random.seed(123)\n",
+    "\n",
+    "# Generate example data\n",
+    "group1 = np.random.normal(loc=2.5000, scale=0.2300, size=2)\n",
+    "group2 = np.random.normal(loc=2.5850, scale=0.2748, size=2)\n",
+    "\n",
+    "# Perform t-test for independent samples\n",
+    "t_stat, p_value = stats.ttest_ind(group1, group2)\n",
+    "\n",
+    "# Print results\n",
+    "print(f'T-statistic: {t_stat}')\n",
+    "print(f'P-value: {p_value}')\n",
+    "\n",
+    "# Check if the difference is statistically significant (common alpha level is 0.05)\n",
+    "alpha = 0.05\n",
+    "if p_value < alpha:\n",
+    "    print(\"The difference in means is statistically significant.\")\n",
+    "else:\n",
+    "    print(\"There is no significant difference in means.\")\n"
    ]
   },
   {
@@ -513,22 +555,6 @@
    "metadata": {},
    "source": [
     "However, when longevity as a marker for access to care before and after national coverage was considered as a function of income decile, increases for those in the lower income deciles accounted for the majority of the overall increase. Longevity increased more for lower decile women than upper decile women after NHC than before NHC, but the difference was not quite statistically significant. Lower decile men made significantly better gains in longevity compared to their more affluent counterparts. For men in the three highest income deciles with more access to healthcare prior to NHC, longevity increased less (1.51%, 0.84% and 0.17% respectively) after than before national healthcare coverage. For men in the lowest three deciles little to no access to healthcare prior to NHC, longevity increased more (1.39%, 0.47% and 0.74% respectively) before and after national healthcare coverage. The rate of increase in longevity *slowed* slightly for the upper deciles but *accelerated* for the lowest deciles {cite:p}`Wen2008-vr`. This difference was found to be statistically significant. "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "03fd6d3d-d7fc-4e9b-b843-4adc84b2c477",
-   "metadata": {},
-   "source": [
-    "T TEST 2 "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "9a887baa-7919-40c0-a4e5-3e644b03b59d",
-   "metadata": {},
-   "source": [
-    "T TEST 3 "
    ]
   },
   {
