Error in rendering fix. Second try at fixing

--- a/contrib/MiaVenezia/jupyterbook-demo-MiaVenezia/MiaVenezia-paper.ipynb
+++ b/contrib/MiaVenezia/jupyterbook-demo-MiaVenezia/MiaVenezia-paper.ipynb
@@ -588,12 +588,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f43aeab1-07e7-4a93-a8fe-40c2057c056a",
+   "cell_type": "markdown",
+   "id": "3c0018fa-3fd8-47eb-9baa-e98153db13f9",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "```{bibliography}{"
+   ]
   }
  ],
  "metadata": {
