--- a/contrib/MiaVenezia/jupyterbook-demo-MiaVenezia/MiaVenezia-paper.ipynb
+++ b/contrib/MiaVenezia/jupyterbook-demo-MiaVenezia/MiaVenezia-paper.ipynb
@@ -570,12 +570,19 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1d5562b0-a480-4378-8ec1-0ef860584e79",
+   "cell_type": "markdown",
+   "id": "cf77e920-f21b-4439-b109-360e91fb3780",
    "metadata": {},
-   "outputs": [],
    "source": [
+    "# References "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "089db156-76a5-4a51-9db5-1e95ffd8a67f",
+   "metadata": {},
+   "source": [
+    "```{bibliography}\n",
     "```"
    ]
   }
