This is getting rather frustrating. Put the markdown bibliography command back into the same cell as the References heading.

--- a/contrib/MiaVenezia/jupyterbook-demo-MiaVenezia/MiaVenezia-paper.ipynb
+++ b/contrib/MiaVenezia/jupyterbook-demo-MiaVenezia/MiaVenezia-paper.ipynb
@@ -574,15 +574,9 @@
    "id": "00f96c3a-c06d-4646-8243-9e4716e65ced",
    "metadata": {},
    "source": [
-    "# References"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "da2d164f-958a-4cb2-970d-6a9cca7e6c6c",
-   "metadata": {},
-   "source": [
-    "```{bibliography: as.180.369.temp/contrib/MiaVenezia/jupyterbook-demo-MiaVenezia/paperpile_references.bib}\n",
+    "# References\n",
+    "\n",
+    "```{bibliography}\n",
     "```"
    ]
   }
